wordpress/ameasalong/wordpress-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: wordpress-ameasalong
  labels:
    app.kubernetes.io/name: wordpress
    app.kubernetes.io/instance: ameasalong
    app.kubernetes.io/component: cms
    app.kubernetes.io/managed-by: kubectl
