wordpress/ameasalong/wordpress-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: wordpress
  namespace: wordpress-ameasalong
  labels:
    app.kubernetes.io/name: wordpress
    app.kubernetes.io/instance: ameasalong
    app.kubernetes.io/component: cms
    app.kubernetes.io/part-of: wordpress
    app.kubernetes.io/managed-by: kubectl
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: wordpress
      app.kubernetes.io/instance: ameasalong
      app.kubernetes.io/component: cms
  template:
    metadata:
      labels:
        app.kubernetes.io/name: wordpress
        app.kubernetes.io/instance: ameasalong
        app.kubernetes.io/component: cms
        app.kubernetes.io/managed-by: kubectl
    spec:
      containers:
        - name: wordpress
          image: wordpress:6
          ports:
            - containerPort: 80
          resources:
            limits:
              cpu: 2000m
              memory: 2Gi
            requests:
              cpu: 500m
              memory: 1Gi
          volumeMounts:
            - mountPath: /var/www/html
              name: data
      volumes:
        - name: data
          nfs:
            path: /export/Kubernetes/wordpress/ameasalong
            server: 192.168.86.107
