wordpress/ameasalong/wordpress-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: wordpress
  namespace: wordpress-ameasalong
  labels:
    app.kubernetes.io/name: wordpress
    app.kubernetes.io/instance: ameasalong
    app.kubernetes.io/component: ingress
    app.kubernetes.io/managed-by: kubectl
spec:
  selector:
    app.kubernetes.io/name: wordpress
    app.kubernetes.io/instance: ameasalong
    app.kubernetes.io/component: ingress
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
