wordpress/ameasalong/wordpress-ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: wordpress
  namespace: wordpress-ameasalong
  labels:
    app.kubernetes.io/name: wordpress
    app.kubernetes.io/instance: ameasalong
    app.kubernetes.io/component: ingress
    app.kubernetes.io/managed-by: kubectl
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`staging.ameasalong.se`)
      kind: Rule
      services:
        - name: wordpress
          port: 80
